--- a/i18n/Languages_nl.properties
+++ b/i18n/Languages_nl.properties
@@ -12,12 +12,12 @@ i18n_welcome_2nd = Nictiz Daily Build SNOMED CT Browser
 i18n_home1 = This Browser provides access to daily builds of the next version of SNOMED CT Extension for the Netherlands. This browser contains a test build of the terminology for evaluation purposes only. There can be no expectation of continuity of identifiers, descriptions text or changes in components (e.g. relationships). No new concepts or identifiers may be used in clinical systems.
 i18n_home2 = Please select a SNOMED CT release and a perspective from the top menu to start, or...
 i18n_go_browsing = Go browsing...
-i18n_home3 =
-i18n_home4 =
-i18n_home5 =
+i18n_home3 = a
+i18n_home4 = a
+i18n_home5 = a
 i18n_home6 = <span class="btn-success"><em>Releases</em></span> will allow the selection of SNOMED CT content from the International Edition or other extensions, with specific dates.
 i18n_home7 = <span class="btn-primary"><em>Perspectives</em></span>  are pre-defined browsing layouts for specific purposes. Use the <a href="javascript:void(0);" onclick="switchToResponsiveLayout(404684003,404684003);">responsive perspective</a> for best results in tablets and phones.
-i18n_home8 =
+i18n_home8 = a
 i18n_translation_warning = This option only applies to the Browser. Terminology language depends on the selected edition.
 i18n_or = or
 i18n_go_back_home = go back to home page
