Minor fixes and new config object

--- a/i18n/Languages_es_UY.properties
+++ b/i18n/Languages_es_UY.properties
@@ -51,6 +51,7 @@ i18n_drag_this = Arrastre
 i18n_favorites = Favoritos
 i18n_refset = Conjunto de referencias
 i18n_references = Referencias
+i18n_browse = Navegar
 
 # Concept Details panel
 i18n_concept_details = Detalles del Concepto
