--- a/i18n/Languages.properties
+++ b/i18n/Languages.properties
@@ -17,7 +17,7 @@ i18n_home4 = If you would like to get involved in the development, this code is 
 i18n_home5 = The Browser is provided by the IHTSDO to anyone for reference purposes. There are other tools developed by IHTSDO for Members for the use in health care settings.
 i18n_home6 = <span class="btn-success"><em>Releases</em></span> will allow the selection of SNOMED CT content from the International Edition or other extensions, with specific dates.
 i18n_home7 = <span class="btn-primary"><em>Perspectives</em></span>  are pre-defined browsing layouts for specific purposes. Use the <a href="javascript:void(0);" onclick="switchToResponsiveLayout(404684003,404684003);">responsive perspective</a> for best results in tablets and phones.
-i18n_home8 = Many thanks to the IHTSDO Member countries who have provided their extensions in this browser. If you would like to enquire further about any of the Member country extensions in this browser, please contact the relevant National Release Center via the URL's below:
+i18n_home8 = Many thanks to the IHTSDO Member countries who have provided their extensions in this browser. If you would like to enquire further about any of the Member country extensions in this browser, please contact the relevant National Release Center via the URLs below:
 i18n_translation_warning = This option only applies to the Browser. Terminology language depends on the selected edition.
 i18n_or = or
 i18n_go_back_home = go back to home page
@@ -50,6 +50,8 @@ i18n_drag_this = Drag this
 i18n_favorites = Favorites
 i18n_refset = Refset
 i18n_references = References
+i18n_browse = Browse
+
 
 # Concept Details Panel
 i18n_concept_details = Concept Details
